--- a/app/views/widgets/index.html.erb
+++ b/app/views/widgets/index.html.erb
@@ -1,5 +1,6 @@
 <h1 class="jumbotron text-center">Wacky Widget</h1>
-<h3 class="text-center">No Widgets Exist</h3>
+<% if @widgetA %>
+
 <table class='text-dark'>
     <thead>
         <tr>
@@ -27,7 +28,9 @@
 
 
 </table>
-
+<% else %>
+<h3 class="text-center">No Widgets Exist</h3>
+<% end %>
 <hr>
 
 
